--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pydmc_route"
 version = "0.5.0"
 description = "Differentiable river routing library for hydrological modeling"
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 requires-python = ">=3.8"
 authors = [
     {name = "dMC-Route Authors"}
@@ -16,7 +16,6 @@ keywords = ["hydrology", "routing", "muskingum-cunge", "differentiable", "machin
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -44,9 +43,9 @@ Homepage = "https://github.com/your-org/dmc-route"
 Documentation = "https://github.com/your-org/dmc-route#readme"
 Repository = "https://github.com/your-org/dmc-route"
 
+# Don't look for Python packages - this is a pure C++ extension built by setup.py
 [tool.setuptools]
-packages = ["pydmc_route"]
-package-dir = {"" = "python"}
+py-modules = []
 
 [tool.black]
 line-length = 88
