--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ __pycache__/
 *.so
 *.egg
 *.egg-info/
+pydmc_route.egg-info/
+droute.egg-info/
 dist/
 .eggs/
 *.whl
@@ -25,6 +27,7 @@ venv/
 env/
 .env/
 .python-version
+MANIFEST
 
 # Compiled objects
 *.o
