--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=45", "wheel", "cmake>=3.15", "pybind11>=2.10"]
+requires = ["setuptools>=64", "wheel", "cmake>=3.15", "pybind11>=2.10"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -7,7 +7,7 @@ name = "droute"
 dynamic = ["version"]
 description = "Differentiable river routing library for hydrological modeling"
 readme = "README.md"
-license = {text = "MIT"}
+license = {file = "LICENSE"}
 requires-python = ">=3.8"
 authors = [
     {name = "Darri Eythorsson", email = "darri.eythorsson@ucalgary.ca"}
@@ -16,6 +16,7 @@ keywords = ["hydrology", "routing", "muskingum-cunge", "differentiable", "machin
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -51,8 +52,11 @@ Repository = "https://github.com/DarriEy/dRoute"
 
 # Don't look for Python packages - this is a pure C++ extension built by setup.py
 [tool.setuptools]
-py-modules = []
+include-package-data = true
+license-files = ["LICENSE"]
+py-modules = ["pydmc_route"]
 package-dir = {"" = "python"}
+zip-safe = false
 
 [tool.setuptools.packages.find]
 where = ["python"]
