--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -3,17 +3,9 @@ name: Build Wheels
 on:
   push:
     branches: [main]
-    tags:
-      - "v*"
   pull_request:
     branches: [main]
   workflow_dispatch:
-    inputs:
-      publish:
-        description: 'Publish to PyPI'
-        required: false
-        default: 'false'
-        type: boolean
 
 jobs:
   build_wheels:
@@ -22,56 +14,41 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-13, macos-14]
-        # ubuntu-latest: x86_64 Linux
-        # macos-13: x86_64 macOS
-        # macos-14: arm64 macOS (Apple Silicon)
+        os: [ubuntu-latest, macos-latest]
+        # ubuntu-latest: x86_64 Linux (manylinux)
+        # macos-latest: arm64 macOS (Apple Silicon)
 
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
 
-      - name: Set up QEMU (for Linux ARM builds)
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.21
         env:
-          # Build for Python 3.8-3.13
-          CIBW_BUILD: "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
+          # Build for Python 3.9-3.12 (most common versions)
+          CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-*"
 
           # Skip 32-bit builds, musllinux, and PyPy
           CIBW_SKIP: "*-win32 *-manylinux_i686 *musllinux* pp*"
 
-          # Build both x86_64 and arm64 on Linux
-          CIBW_ARCHS_LINUX: "x86_64 aarch64"
+          # Only build native architecture
+          CIBW_ARCHS_LINUX: "x86_64"
+          CIBW_ARCHS_MACOS: "arm64"
 
-          # macOS architecture (determined by runner)
-          CIBW_ARCHS_MACOS: "native"
-
-          # Install build dependencies
-          CIBW_BEFORE_BUILD_LINUX: |
-            yum install -y cmake || apt-get update && apt-get install -y cmake
-
-          CIBW_BEFORE_BUILD_MACOS: |
-            brew install cmake ninja || true
+          # Install cmake in manylinux container
+          CIBW_BEFORE_ALL_LINUX: |
+            yum install -y cmake3 || yum install -y cmake
+            which cmake3 && ln -sf $(which cmake3) /usr/local/bin/cmake || true
 
           # Test the built wheel
-          CIBW_TEST_REQUIRES: pytest numpy
-          CIBW_TEST_COMMAND: |
-            python -c "import droute; print(f'Version: {droute.__version__}')"
+          CIBW_TEST_REQUIRES: numpy
+          CIBW_TEST_COMMAND: >
+            python -c "import droute; print(f'Version: {droute.__version__}')" &&
             python -c "import droute; n = droute.Network(); print('Network OK')"
 
-          # Environment variables for build
-          CIBW_ENVIRONMENT: "CMAKE_BUILD_PARALLEL_LEVEL=4"
-
-          # manylinux image
+          # Use manylinux2014 for broader compatibility
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-          CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -94,8 +71,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install build tools
-        run: |
-          python -m pip install --upgrade pip build
+        run: python -m pip install --upgrade pip build
 
       - name: Build sdist
         run: python -m build --sdist
@@ -106,7 +82,6 @@ jobs:
           name: sdist
           path: dist/*.tar.gz
 
-  # Test that the sdist can be built from source
   test_sdist:
     name: Test sdist build
     needs: build_sdist
@@ -127,74 +102,12 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake
+          sudo apt-get install -y cmake ninja-build
 
       - name: Install from sdist
-        run: |
-          python -m pip install dist/*.tar.gz -v
+        run: python -m pip install dist/*.tar.gz -v
 
       - name: Test import
         run: |
           python -c "import droute; print(f'droute version: {droute.__version__}')"
-
-  # Publish to PyPI (only on tag or manual trigger)
-  publish:
-    name: Publish to PyPI
-    needs: [build_wheels, build_sdist, test_sdist]
-    runs-on: ubuntu-latest
-    if: |
-      (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) ||
-      (github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true')
-
-    environment:
-      name: pypi
-      url: https://pypi.org/project/droute/
-
-    permissions:
-      id-token: write  # For trusted publishing
-
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: dist
-          merge-multiple: true
-
-      - name: Display structure of downloaded files
-        run: ls -R dist
-
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          packages-dir: dist/
-
-  # Publish to TestPyPI for PRs and non-tag pushes (optional)
-  publish-testpypi:
-    name: Publish to TestPyPI
-    needs: [build_wheels, build_sdist, test_sdist]
-    runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'push' &&
-      github.ref == 'refs/heads/main' &&
-      !startsWith(github.ref, 'refs/tags/')
-
-    environment:
-      name: testpypi
-      url: https://test.pypi.org/project/droute/
-
-    permissions:
-      id-token: write
-
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: dist
-          merge-multiple: true
-
-      - name: Publish to TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
-          packages-dir: dist/
-          skip-existing: true
+          python -c "import droute; net = droute.Network(); print('Network creation OK')"
