--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -1,69 +1,18 @@
-name: Build Wheels
+name: Build Distribution
 
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
+    tags: ["v*"]
   workflow_dispatch:
 
 jobs:
-  build_wheels:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        # ubuntu-latest: x86_64 Linux (manylinux)
-        # macos-latest: arm64 macOS (Apple Silicon)
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.21
-        env:
-          # Build for Python 3.9-3.12 (most common versions)
-          CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-*"
-
-          # Skip 32-bit builds, musllinux, and PyPy
-          CIBW_SKIP: "*-win32 *-manylinux_i686 *musllinux* pp*"
-
-          # Only build native architecture
-          CIBW_ARCHS_LINUX: "x86_64"
-          CIBW_ARCHS_MACOS: "arm64"
-
-          # Install cmake in manylinux container
-          CIBW_BEFORE_ALL_LINUX: |
-            yum install -y cmake3 || yum install -y cmake
-            which cmake3 && ln -sf $(which cmake3) /usr/local/bin/cmake || true
-
-          # Test the built wheel
-          CIBW_TEST_REQUIRES: numpy
-          CIBW_TEST_COMMAND: >
-            python -c "import droute; print(f'Version: {droute.__version__}')" &&
-            python -c "import droute; n = droute.Network(); print('Network OK')"
-
-          # Use manylinux2014 for broader compatibility
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-${{ matrix.os }}
-          path: ./wheelhouse/*.whl
-
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: recursive
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -81,33 +30,3 @@ jobs:
         with:
           name: sdist
           path: dist/*.tar.gz
-
-  test_sdist:
-    name: Test sdist build
-    needs: build_sdist
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download sdist
-        uses: actions/download-artifact@v4
-        with:
-          name: sdist
-          path: dist
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y cmake ninja-build
-
-      - name: Install from sdist
-        run: python -m pip install dist/*.tar.gz -v
-
-      - name: Test import
-        run: |
-          python -c "import droute; print(f'droute version: {droute.__version__}')"
-          python -c "import droute; net = droute.Network(); print('Network creation OK')"
