--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,74 +8,64 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    name: Test ${{ matrix.os }} / Python ${{ matrix.python-version }}
+  build-and-test:
+    name: ${{ matrix.os }} / Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.11"]
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
-        with:
-          submodules: recursive
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install system dependencies (Ubuntu)
+      - name: Install system deps (Ubuntu)
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake ninja-build
+          sudo apt-get install -y cmake ninja-build libnetcdf-dev
 
-      - name: Install system dependencies (macOS)
+      - name: Install system deps (macOS)
         if: runner.os == 'macOS'
-        run: brew install cmake ninja
+        run: |
+          brew install cmake ninja netcdf
 
-      - name: Install Python dependencies
+      - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest numpy
+          python -m pip install numpy pytest
 
-      - name: Build and install package
-        run: python -m pip install -e . -v
-
-      - name: Run tests
-        run: python -m pytest tests/python -v --tb=short
-
-  # Quick smoke test
-  smoke-test:
-    name: Smoke test (Python ${{ matrix.python-version }})
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install system dependencies
+      - name: Build with CMake
         run: |
-          sudo apt-get update
-          sudo apt-get install -y cmake ninja-build
+          cmake -B build -G Ninja \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DDMC_BUILD_PYTHON=ON \
+            -DDMC_BUILD_TESTS=ON \
+            -DDMC_ENABLE_NETCDF=ON
+          cmake --build build
 
-      - name: Install package
-        run: python -m pip install . -v
-
-      - name: Test import
+      - name: Run C++ tests
         run: |
-          python -c "import droute; print(f'droute version: {droute.__version__}')"
-          python -c "import droute; net = droute.Network(); print('Network creation OK')"
-          python -c "import droute; cfg = droute.RouterConfig(); print(f'RouterConfig OK, dt={cfg.dt}')"
+          cd build
+          ctest --output-on-failure
+
+      - name: Install Python package
+        run: |
+          pip install -e .
+
+      - name: Run Python tests
+        run: |
+          python -m pytest tests/python -v --tb=short
+
+      - name: Smoke test
+        run: |
+          python -c "import droute; print(f'Version: {droute.__version__}')"
+          python -c "import droute; n = droute.Network(); print('Network OK')"
+          python -c "import droute; c = droute.RouterConfig(); print(f'Config OK, dt={c.dt}')"
