--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -30,3 +30,49 @@ jobs:
         with:
           name: sdist
           path: dist/*.tar.gz
+
+  build_wheels_test:
+    name: Build wheels test (full flags)
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install system deps (Ubuntu)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake ninja-build libnetcdf-dev
+
+      - name: Install Python deps
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install numpy pytest
+
+      - name: Editable install (pip -e) first
+        run: |
+          pip install -e .
+          python -c "import droute; print(f'Editable install OK: {droute.__version__}')"
+
+      - name: Full CMake build (all flags)
+        run: |
+          cmake -B build -G Ninja \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DDMC_ENABLE_AD=ON \
+            -DDMC_ENABLE_ENZYME=OFF \
+            -DDMC_ENABLE_NETCDF=ON \
+            -DDMC_BUILD_TESTS=ON \
+            -DDMC_BUILD_PYTHON=ON \
+            -DDMC_BUILD_SHARED=ON \
+            -DDMC_ENABLE_OPENMP=OFF \
+            -DDMC_ENABLE_SUNDIALS=OFF
+          cmake --build build
+
+      - name: Run C++ tests
+        run: |
+          cd build
+          ctest --output-on-failure
