--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -46,7 +46,23 @@ jobs:
       - name: Install system deps (Ubuntu)
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake ninja-build libnetcdf-dev
+          sudo apt-get install -y cmake ninja-build libnetcdf-dev \
+            llvm-17-dev clang-17 lld-17 libclang-17-dev
+
+      - name: Build Enzyme from source (Ubuntu)
+        run: |
+          git clone --depth 1 https://github.com/EnzymeAD/Enzyme.git
+          LLVM_CONFIG=llvm-config-17
+          cmake -S Enzyme -B Enzyme/build -DLLVM_DIR="$($LLVM_CONFIG --cmakedir)"
+          cmake --build Enzyme/build
+          ENZYME_PLUGIN=$(find Enzyme/build -name "ClangEnzyme*.so" -o -name "ClangEnzyme*.dylib" | head -n 1)
+          if [ -z "$ENZYME_PLUGIN" ]; then
+            echo "Enzyme plugin not found in build output" >&2
+            exit 1
+          fi
+          echo "ENZYME_PLUGIN=$ENZYME_PLUGIN" >> $GITHUB_ENV
+          echo "CC=clang-17" >> $GITHUB_ENV
+          echo "CXX=clang++-17" >> $GITHUB_ENV
 
       - name: Install Python deps
         run: |
@@ -63,13 +79,14 @@ jobs:
           cmake -B build -G Ninja \
             -DCMAKE_BUILD_TYPE=Release \
             -DDMC_ENABLE_AD=ON \
-            -DDMC_ENABLE_ENZYME=OFF \
+            -DDMC_ENABLE_ENZYME=ON \
             -DDMC_ENABLE_NETCDF=ON \
             -DDMC_BUILD_TESTS=ON \
             -DDMC_BUILD_PYTHON=ON \
             -DDMC_BUILD_SHARED=ON \
             -DDMC_ENABLE_OPENMP=OFF \
-            -DDMC_ENABLE_SUNDIALS=OFF
+            -DDMC_ENABLE_SUNDIALS=OFF \
+            -DENZYME_PLUGIN="${ENZYME_PLUGIN}"
           cmake --build build
 
       - name: Run C++ tests
