--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -159,7 +159,7 @@ jobs:
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          python -m pip install numpy pytest wheel
+          python -m pip install numpy pytest wheel setuptools
 
       - name: Editable install (pip -e) first
         run: |
