add ci workflows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -260,6 +260,16 @@ if(APPLE)
         endif()
     endif()
 endif()
+set(DMC_LLVM_LIBCXX "")
+set(DMC_LLVM_LIBCXXABI "")
+if(DMC_LLVM_LIBDIR)
+    if(EXISTS "${DMC_LLVM_LIBDIR}/libc++.dylib")
+        set(DMC_LLVM_LIBCXX "${DMC_LLVM_LIBDIR}/libc++.dylib")
+    endif()
+    if(EXISTS "${DMC_LLVM_LIBDIR}/libc++abi.dylib")
+        set(DMC_LLVM_LIBCXXABI "${DMC_LLVM_LIBDIR}/libc++abi.dylib")
+    endif()
+endif()
 
 # ============ Shared Library Wrapper ============
 if(DMC_BUILD_SHARED)
@@ -275,6 +285,12 @@ if(DMC_BUILD_SHARED)
     if(DMC_LLVM_LIBDIR)
         target_link_directories(dmc_route_shared PRIVATE "${DMC_LLVM_LIBDIR}")
         target_link_options(dmc_route_shared PRIVATE "-Wl,-rpath,${DMC_LLVM_LIBDIR}")
+    endif()
+    if(DMC_LLVM_LIBCXX)
+        target_link_libraries(dmc_route_shared PRIVATE "${DMC_LLVM_LIBCXX}")
+    endif()
+    if(DMC_LLVM_LIBCXXABI)
+        target_link_libraries(dmc_route_shared PRIVATE "${DMC_LLVM_LIBCXXABI}")
     endif()
 endif()
 
@@ -309,6 +325,12 @@ if(DMC_BUILD_PYTHON)
     if(DMC_LLVM_LIBDIR)
         target_link_directories(_droute_core PRIVATE "${DMC_LLVM_LIBDIR}")
         target_link_options(_droute_core PRIVATE "-Wl,-rpath,${DMC_LLVM_LIBDIR}")
+    endif()
+    if(DMC_LLVM_LIBCXX)
+        target_link_libraries(_droute_core PRIVATE "${DMC_LLVM_LIBCXX}")
+    endif()
+    if(DMC_LLVM_LIBCXXABI)
+        target_link_libraries(_droute_core PRIVATE "${DMC_LLVM_LIBCXXABI}")
     endif()
     
     # Set output name and properties
@@ -350,6 +372,12 @@ endif()
 if(DMC_LLVM_LIBDIR)
     target_link_directories(dmc_route_run PRIVATE "${DMC_LLVM_LIBDIR}")
     target_link_options(dmc_route_run PRIVATE "-Wl,-rpath,${DMC_LLVM_LIBDIR}")
+endif()
+if(DMC_LLVM_LIBCXX)
+    target_link_libraries(dmc_route_run PRIVATE "${DMC_LLVM_LIBCXX}")
+endif()
+if(DMC_LLVM_LIBCXXABI)
+    target_link_libraries(dmc_route_run PRIVATE "${DMC_LLVM_LIBCXXABI}")
 endif()
 
 # ============ Tests ============
