add ci workflows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,9 +265,13 @@ set(DMC_LLVM_LIBCXXABI "")
 if(DMC_LLVM_LIBDIR)
     if(EXISTS "${DMC_LLVM_LIBDIR}/libc++.dylib")
         set(DMC_LLVM_LIBCXX "${DMC_LLVM_LIBDIR}/libc++.dylib")
+    elseif(EXISTS "${DMC_LLVM_LIBDIR}/libc++.1.dylib")
+        set(DMC_LLVM_LIBCXX "${DMC_LLVM_LIBDIR}/libc++.1.dylib")
     endif()
     if(EXISTS "${DMC_LLVM_LIBDIR}/libc++abi.dylib")
         set(DMC_LLVM_LIBCXXABI "${DMC_LLVM_LIBDIR}/libc++abi.dylib")
+    elseif(EXISTS "${DMC_LLVM_LIBDIR}/libc++abi.1.dylib")
+        set(DMC_LLVM_LIBCXXABI "${DMC_LLVM_LIBDIR}/libc++abi.1.dylib")
     endif()
 endif()
 
