add ci workflows

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -164,6 +164,7 @@ jobs:
 
       - name: Editable install (pip -e) first
         run: |
+          SETUPTOOLS_ENABLE_FEATURES="legacy-editable" \
           CMAKE_ARGS="-DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_VERBOSE_MAKEFILE=ON -DDMC_ENABLE_ENZYME=ON -DENZYME_PLUGIN=${ENZYME_PLUGIN} -DDMC_ENABLE_SUNDIALS=ON -DSUNDIALS_ROOT=${SUNDIALS_ROOT} -DDMC_ENABLE_OPENMP=ON" \
             pip -v install -e . --no-build-isolation
           python -c "import droute; print(f'Editable install OK: {droute.__version__}')"
