--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -165,12 +165,14 @@ jobs:
       - name: Editable install (pip -e) first
         run: |
           EXTRA_CMAKE_ARGS=""
+          PIP_EDITABLE_ARGS=""
           if [ "${RUNNER_OS}" = "macOS" ]; then
             EXTRA_CMAKE_ARGS="-DDMC_BUILD_RUN=OFF"
+            PIP_EDITABLE_ARGS="--no-use-pep517"
           fi
           SETUPTOOLS_ENABLE_FEATURES="legacy-editable" \
           CMAKE_ARGS="-DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_VERBOSE_MAKEFILE=ON -DDMC_ENABLE_ENZYME=ON -DENZYME_PLUGIN=${ENZYME_PLUGIN} -DDMC_ENABLE_SUNDIALS=ON -DSUNDIALS_ROOT=${SUNDIALS_ROOT} -DDMC_ENABLE_OPENMP=ON ${EXTRA_CMAKE_ARGS}" \
-            pip -v install -e . --no-build-isolation
+            pip -v install -e . --no-build-isolation ${PIP_EDITABLE_ARGS}
           python -c "import droute; print(f'Editable install OK: {droute.__version__}')"
 
       - name: Full CMake build (all flags)
