--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -163,14 +163,14 @@ jobs:
           python -m pip install numpy pytest wheel setuptools
 
       - name: Editable install (pip -e) first
+        env:
+          PIP_USE_PEP517: "0"
+          SETUPTOOLS_ENABLE_FEATURES: "legacy-editable"
         run: |
           EXTRA_CMAKE_ARGS=""
-          PIP_USE_PEP517_ENV=""
           if [ "${RUNNER_OS}" = "macOS" ]; then
             EXTRA_CMAKE_ARGS="-DDMC_BUILD_RUN=OFF"
-            PIP_USE_PEP517_ENV="PIP_USE_PEP517=0"
           fi
-          ${PIP_USE_PEP517_ENV} SETUPTOOLS_ENABLE_FEATURES="legacy-editable" \
           CMAKE_ARGS="-DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_VERBOSE_MAKEFILE=ON -DDMC_ENABLE_ENZYME=ON -DENZYME_PLUGIN=${ENZYME_PLUGIN} -DDMC_ENABLE_SUNDIALS=ON -DSUNDIALS_ROOT=${SUNDIALS_ROOT} -DDMC_ENABLE_OPENMP=ON ${EXTRA_CMAKE_ARGS}" \
             pip -v install -e . --no-build-isolation
           python -c "import droute; print(f'Editable install OK: {droute.__version__}')"
