Fix macOS CI: explicitly link against libc++ with linker flags

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -166,8 +166,9 @@ jobs:
         run: |
           EXTRA_CMAKE_ARGS=""
           if [ "${RUNNER_OS}" = "macOS" ]; then
-            EXTRA_CMAKE_ARGS="-DDMC_BUILD_RUN=OFF -DDMC_LLVM_LIBDIR=${LLVM_PREFIX}/lib"
+            EXTRA_CMAKE_ARGS="-DDMC_BUILD_RUN=OFF -DCMAKE_SHARED_LINKER_FLAGS=-lc++ -DCMAKE_MODULE_LINKER_FLAGS=-lc++"
             export MACOSX_DEPLOYMENT_TARGET=11.0
+            export LDFLAGS="-L${LLVM_PREFIX}/lib -Wl,-rpath,${LLVM_PREFIX}/lib"
           fi
           CMAKE_ARGS="-DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_VERBOSE_MAKEFILE=ON -DDMC_ENABLE_ENZYME=ON -DENZYME_PLUGIN=${ENZYME_PLUGIN} -DDMC_ENABLE_SUNDIALS=ON -DSUNDIALS_ROOT=${SUNDIALS_ROOT} -DDMC_ENABLE_OPENMP=ON ${EXTRA_CMAKE_ARGS}" \
             pip -v install . --no-build-isolation
