--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,7 +9,7 @@ recursive-include cmake *.cmake *.in
 recursive-include include *.hpp *.h
 recursive-include src *.cpp *.c
 recursive-include python *.cpp *.py
-recursive-include external *.hpp *.h
+recursive-include external *.hpp *.h *.hxx
 global-exclude *.pyc *.pyo *.o *.obj *.so *.dylib *.dll
 global-exclude __pycache__
 global-exclude *.egg-info
